Wed Nov 12 07:16:01 2008  David Flanagan  <david@think32>

	* ruby.c (set_internal_encoding_once): fix typo in error string

Wed Nov 12 03:30:59 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/intern.h (rb_{external,locale}_str_new_cstr): optimized
	  versions for literal strings.

Wed Nov 12 03:28:41 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* load.c (rb_require_safe): destroys barrier after successfully
	  loaded, to get rid of loading same library again.  [ruby-core:19798]

	* thread.c (rb_barrier_wait): can not wait destroyed barrier.

	* thread.c (rb_barrier_destroy): destroys barrier so that no longer
	  waited.

Tue Nov 11 21:22:28 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/uri/generic.rb (URI::Generic#check_path): REL_PATH should a
	  symbol.  [ruby-core:19805]

Tue Nov 11 23:02:27 2008  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* man/ruby.1 (RUBYOPT): wrote which option can appear.
	  (--yydebug): wrote "do not use".
	  (--dump): wrote "do not use".

Tue Nov 11 20:49:29 2008  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* configure.in: fix SEGV on Mac OS X 10.5.3 with pthread.
	  a patch from Wataru Kimura in Bug #193 [ruby-core:17333].

Tue Nov 11 23:24:23 2008  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* ruby.c: merges r20053 and r20067 from trunk into ruby_1_9_1.

	* ruby.c (moreswitches): splits option string and passes arguments.

	* ruby.c (proc_options): checks if allowed in RUBYOPT.

	* ruby.c (process_options): allows long style options in RUBYOPT.

	* ruby.c (load_file_internal): ditto in shebang.  [ruby-dev:36979]

	* ruby.c (process_options): delays setting safe level.
	  [ruby-dev:36997]

Tue Nov 11 23:36:45 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (rb_w32_accept): commit miss.

Tue Nov 11 23:02:27 2008  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* man/ruby.1 (RUBYOPT): wrote which option can appear.
	  (--yydebug): wrote "do not use".
	  (--dump): wrote "do not use".
